2002-04-18  Per Bothner  <per@bothner.com>

	* kawa/lang/Record.java (makeRecordType):  No longer need to
	catch java.io.IOException, since writeToArray now takes care of it.

2002-03-21  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewrite):  Check for mis-placed '::'.

	* kawa/standard/IfFeature.java:  New class, extends Syntax.
	* kawa/standard/Makefile.am (java_sources):  Add IfFeature.java.
	* kawa/standard/Scheme.java:  Standard procedures memq, memv, member,
	assq, assv, and assoc are now defined in kawa.lib.syntax.
	* kawa/standard/require.java:  Recognuze 'srfi-1 and 'list-lib.

2002-03-19  Per Bothner  <per@bothner.com>

	* configure.in (AC_OUTPUT):  Add gnu/jemacs/swing/Makefile.

2002-03-07  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite_pair):  Use get, with a default,
	in case there is an existing Binding, but it is unbound.

	* configure.in (pathset, filesep):  New substitutions.
	* Make-rules (CLASSPATH_ENV): Use pathsep and filesep.

	* configure.in:  Add links for 3 gnu/xquery/testsuite xml data files.

2002-03-02  Per Bothner  <per@bothner.com>

	* .../*/Makefile.am, Makefile.in:  Updated to autmake-1.5d.
	Since SOURCES now gets over-written, move source list to EXTRA_DIST.
	Use automake include instead of autoconf substitution.
	Remove AUTOMAKE_OPTIONS, except in doc.
	Various related tweaks.
	* AUTHORS, INSTALL, depcomp:  New files, required by automake now
	that AUTOMAKE_OPTIONS is no longer foreign.
	* Make-rules:  Various updates, now that we use autoamke inclusion.
	(SED_REFERENCES_SUBS):  Moved from 3 three other Makefile.am's.
	* configure.in:  Various fixes/tweaks.

	* libtool.m4, ltmain.sh:  Updated to cvs libtool.
	* libtool.m4:  Don't add -DPIC compile flag if tag is GCJ.
	(ac_compile. ac_link):  Add definitions.
	* ltcf-c.sh, ltcf-cxx.sh, ltcf-gcj.sh, ltconfig:  Removed.

	* kawa/lang/CompileFile.java (read):  Add throws specifications since
	Interpreter's parseFile.has them.